# bitcask-rs

./: .editorconfig  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README-04-systems-rust.md  README.md
benches/: README.md  kv_bench.rs
docs/: benchmarks.md  design.md  durability.md
scripts/: README.md
src/: compaction.rs  error.rs  keydir.rs  lib.rs  log.rs  record.rs
src/server/: protocol.rs
tests/: integration.rs  property.rs  recovery.rs
workloads/: README.md
workloads/samples/: smoke.csv
